# license_manager_2026

./: .gitignore  AGENTS.md  GEMINI.md  README.md  consititution.md  plan.drawio  pytest.ini  spec.md
client/: pyproject.toml
docs/: manual-simulator.md  (+1 more)
server/: pyproject.toml
simulators/: pyproject.toml
simulators/lmgrd-sim/: api.py  db.py  license_parser.py  logs.py  main.py  state.py
simulators/lmstat-sim/: client.py  main.py  output.py
simulators/src/license_manager_simulators/: __init__.py
simulators/src/license_manager_simulators/core/: __init__.py  license_parser.py  log_writer.py  models.py  service.py  store.py
simulators/src/license_manager_simulators/lmgrd/: __init__.py  app.py  cli.py  schemas.py
simulators/src/license_manager_simulators/lmstat/: __init__.py  cli.py  client.py  output.py
simulators/src/license_manager_simulators/workload/: __init__.py  cli.py  http_client.py  process_manager.py  runner.py  sampler.py  scenario.py  sqlite_sink.py  validator.py
simulators/tests/: conftest.py  test_bookkeeping.py  test_checkout_flow.py  test_denials_idempotency.py  test_lmgrd_sim.py  test_lmstat_sim.py  test_log_template.py  test_queue_semantics.py  test_sim_integration.py
simulators/tests/integration/: test_lmgrd_api.py  test_lmstat_realtime.py  test_workload_runner.py
simulators/tests/unit/: test_license_parser.py  test_lmstat_output.py  test_log_writer.py  test_store_service.py  test_workload_sampler.py  test_workload_scenario.py  test_workload_sqlite_sink.py  test_workload_validator.py
simulators/wrappers/: lmgrd  lmstat
(+48 files in other folders)
