[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "license-manager-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.0",
  "sqlalchemy>=2.0",
  "psycopg>=3.1",
  "alembic>=1.13",
  "jinja2>=3.1",
]
